--- a/data-collection-system/src/MainPage.css
+++ b/data-collection-system/src/MainPage.css
@@ -1,50 +1,45 @@
-.page {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  max-width: 500px;
-  padding: 0 20px;
-  left: 50%;
-  transform: translate(-50%, 0);
-  background-color: #F7F7F7;
-  overflow: hidden;
+/* MainPage.css */
+body {
+  font-family: Arial, sans-serif;
   display: flex;
-  flex-direction: column;
-}
-
-.titleWrap {
-  margin-top: 87px;
-  font-size: 26px;
-  font-weight: 700;
-  color: #262626;
-  text-align: center;
-}
-
-.buttonWrap {
-  margin-top: 26px;
-  display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  flex: 1;
+  height: 100vh;
+  margin: 0;
+  background-color: #f4f6f9;
 }
 
-.button {
+.container {
+  text-align: center;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  margin-bottom: 20px;
+}
+
+button {
+  display: block;
   width: 100%;
-  max-width: 300px;
   padding: 10px;
   margin: 10px 0;
   font-size: 16px;
   cursor: pointer;
   border: none;
   border-radius: 64px;
-  background-color: #007bff;
+  background-color: #9e30f4;
   color: white;
-  text-align: center;
 }
 
-.button:hover {
+button:hover {
   background-color: #0056b3;
+}
+
+.hidden {
+  display: none;
 }
 
 .user-info {
@@ -62,6 +57,7 @@
   padding: 5px 10px;
   font-size: 12px;
   background-color: #dc3545;
+  border-radius: 64px;
 }
 
 .logout-btn:hover {
