--- a/data-collection-system/src/MainPage.css
+++ b/data-collection-system/src/MainPage.css
@@ -1,65 +1,74 @@
-/* MainPage.css */
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  margin: 0;
-  background-color: #f4f6f9;
+  height: 100%;
+  width: 100%; /* 전체 너비 설정 */
+  background-color: #000000; /* 배경 그라데이션 */
 }
 
-.container {
-  text-align: center;
+.main-container {
+  display: flex;
+  width: 98vw; /* 전체 화면 너비 */
+  height: 200vw; /* 전체 화면 높이 */
+  box-shadow: none; /* 그림자 제거 */
+  border-radius: 0; /* 곡률 제거 */
+  background-color: #ffffff;
+  overflow: hidden;
+}
+
+.left-section {
+  flex: 1;
+  background: linear-gradient(to top right, #e0e4e8, #f2f6fa);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  height: 100%; /* 전체 높이 사용 */
+}
+
+.right-section {
+  flex: 1;
   background-color: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  height: 100%; /* 전체 높이 사용 */
 }
 
 h1 {
-  margin-bottom: 20px;
+  font-size: 4em; /* 폰트 크기 증가 */
+  color: #2c3e50;
+  margin-bottom: 40px; /* 여백 증가 */
+  text-align: center;
 }
 
-button {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  font-size: 16px;
+.auth-buttons, .admin-buttons, .user-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px; /* 여백 증가 */
+}
+
+.button {
+  padding: 15px 30px;
+  margin: 15px 0; /* 여백 증가 */
+  font-size: 20px; /* 폰트 크기 증가 */
   cursor: pointer;
   border: none;
-  border-radius: 64px;
-  background-color: #9e30f4;
+  border-radius: 8px;
+  background-image: linear-gradient(to right, #6a11cb, #2575fc);
   color: white;
+  transition: all 0.3s ease;
 }
 
-button:hover {
-  background-color: #0056b3;
-}
-
-.hidden {
-  display: none;
-}
-
-.user-info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.user-info div {
-  margin-right: 10px;
-}
-
-.logout-btn {
-  padding: 5px 10px;
-  font-size: 12px;
-  background-color: #dc3545;
-  border-radius: 64px;
-}
-
-.logout-btn:hover {
-  background-color: #c82333;
+.button:hover {
+  background-image: linear-gradient(to right, #2575fc, #6a11cb);
+  transform: translateY(-3px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
