--- a/data-collection-system/src/DeployedChaincodesPage.css
+++ b/data-collection-system/src/DeployedChaincodesPage.css
@@ -1,7 +1,8 @@
 
 .chaincode-selection-container {
+  overflow-y: auto;
   width: 400px;
-  margin: 0 auto;
+  margin: 520px;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
